initial add, includes fixes for missing classnames package, and necessary wrapping of main component in a Suspense

--- a/src/components/openhands/index.module.css
+++ b/src/components/openhands/index.module.css
@@ -1,4 +1,4 @@
-.demo {
+.openhands {
   border-radius: 22px;
   background: rgb(var(--background-demo));
   box-shadow: 0px 4px 10px 5px rgba(139, 142, 161, 0.1);
